# linux_lab_rab

./: CMakeLists.txt  absloadm.c  ex02.ass  ex02.pli  examppl.ass  kompassr.c  komppl.c
